--- a/RotProblems/RotProblems.tex
+++ b/RotProblems/RotProblems.tex
@@ -101,5 +101,7 @@ $\ce{CS2}$ & 0 & $2.71 \cdot 10^{-46}$ & $2.71 \cdot 10^{-46}$ & 3.085 \\ \hline
 \end{center}
 \end{table} 
 
+В силу симметрии молекулы: $I_{ab} = I_{bc} = I_{ac} = 0$.
+
 
 \end{document}
